--- a/src/server/scripts/Custom/CMakeLists.txt
+++ b/src/server/scripts/Custom/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(scripts_STAT_SRCS
   ${scripts_STAT_SRCS}
+  ${AC_SCRIPTS_DIR}/Custom/item_level80.cpp;
+  ${AC_SCRIPTS_DIR}/Custom/item_level255.cpp;
 )
 
 AC_ADD_SCRIPT_LOADER("Custom" "ScriptLoader.h")
